--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 # 应用服务 WEB 访问端口
+spring.application.name=little-deng-service
+server.servlet.context-path=/little-deng-server
 server.port=8080
 
 # 数据库连接信息
@@ -6,6 +8,15 @@ spring.datasource.url=jdbc:mysql://62.234.15.35:3306/deng_db?useSSL=false&server
 spring.datasource.username=root
 spring.datasource.password=mysql_deng
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# 连接池配置 (使用HikariCP，Spring Boot默认)
+# 连接最大存活时间10分钟(600000毫秒)，小于MySQL的wait_timeout(默认8小时)
+spring.datasource.hikari.max-lifetime=600000
+# 连接空闲时间5分钟
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.connection-test-query=SELECT 1  # 测试连接是否有效的SQL
+# 验证连接超时时间
+spring.datasource.hikari.validation-timeout=3000
+
 
 # JPA配置
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
@@ -20,6 +31,6 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # 微信小程序配置
-wechat.appid=your_appid_here
-wechat.secret=your_secret_here
+wechat.appid=wxaffcf37f7585f643
+wechat.secret=5ed5e7c79a1b2c635ce86b97d721591e
 
