--- a/pom.xml
+++ b/pom.xml
@@ -62,8 +62,9 @@
             <version>1.78.1</version> <!-- 版本号可根据需要更新 -->
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+            <version>3.1.8</version>
         </dependency>
     </dependencies>
     <dependencyManagement>
