feat:增加图片上传功能，引入腾讯云COS，又花50多块

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,6 @@
 spring.application.name=little-deng-service
 server.servlet.context-path=/little-deng-server
 server.port=8080
-
 # 数据库连接信息
 spring.datasource.url=jdbc:mysql://62.234.15.35:3306/deng_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
@@ -10,14 +9,12 @@ spring.datasource.password=mysql_deng
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # 连接池配置 (使用HikariCP，Spring Boot默认)
 # 连接最大存活时间10分钟(600000毫秒)，小于MySQL的wait_timeout(默认8小时)
-spring.datasource.hikari.max-lifetime=600000
+spring.datasource.hikari.max-lifetime=3600000
 # 连接空闲时间5分钟
 spring.datasource.hikari.idle-timeout=300000
 spring.datasource.hikari.connection-test-query=SELECT 1  # 测试连接是否有效的SQL
 # 验证连接超时时间
 spring.datasource.hikari.validation-timeout=3000
-
-
 # JPA配置
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
@@ -25,12 +22,24 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.physical_naming_strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
 spring.jpa.database=mysql
-
 # 日志配置
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-# 微信小程序配置
-wechat.appid=wxaffcf37f7585f643
-wechat.secret=5ed5e7c79a1b2c635ce86b97d721591e
+# 图片上传配置
+# 图片保存根路径
+image.upload.path=D:/code/test/dengImg
+# 压缩后的图片质量，0-1之间，1表示最高质量
+image.compress.quality=0.8
+# 压缩后的图片最大宽度
+image.compress.max-width=1920
+# 压缩后的图片最大高度
+image.compress.max-height=1080
+# 单个文件的最大限制
+spring.servlet.multipart.max-file-size=10MB
+# 整个请求的最大限制
+spring.servlet.multipart.max-request-size=10MB
+
+
+spring.profiles.include=local
 
