feat: 修复了字典映射功能BUG，优化；修改了邀请码生成逻辑；数据库引用本地

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -4,6 +4,24 @@ logging:
     root: WARN
     com.example: INFO
 
+#数据库
+spring:
+  datasource:
+    # 数据库连接信息
+    url: jdbc:mysql://62.234.15.35:3306/deng_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+    username: root
+    password: mysql_deng
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    hikari:
+      # 连接池配置 (使用HikariCP，Spring Boot默认)
+      # 连接最大存活时间10分钟(600000毫秒)，小于MySQL的wait_timeout(默认8小时)
+      max-lifetime: 3600000
+      # 连接空闲时间5分钟
+      idle-timeout: 3600000
+      connection-test-query: SELECT 1  # 测试连接是否有效的SQL
+      # 验证连接超时时间
+      validation-timeout: 3000
+
 tencent:
   # COS
   cos:
