--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,9 +12,9 @@ spring:
     name: little-deng-service
   datasource:
     # 数据库连接信息
-    url: jdbc:mysql://62.234.15.35:3306/deng_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://127.0.0.1:3306/deng_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
     username: root
-    password: mysql_deng
+    password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
     hikari:
       # 连接池配置 (使用HikariCP，Spring Boot默认)
